Update 2.56 oom documentation to use resource isolation mode to resolve oom issues
Signed-off-by: davik <davik@anyscale.com>